Begin working on placing options in the timetable
Iteration code is very ugly, but there appears to be no good array
enumeration in JS

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -27,6 +27,11 @@
    <tr ng-repeat="i in time_range()">
       <th ng-repeat="day in day_range()">
          {{day}}, {{i}}
+         <ol>
+            <li ng-repeat="option in options_in_timeslot(day, i)">
+               {{option}}
+            </li>
+         </ol>
       </th>
    </tr>
 </table>
