Add Materialize CSS/JS and style form page(reasonably)
Not exceptional

--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -26,7 +26,7 @@
 <table>
    <tr ng-repeat="i in time_range()">
       <th ng-repeat="day in day_range()">
-         {{day}}, {{i}}
+         <!--{{day}}, {{i}}-->
          <ol>
             <li ng-repeat="option in options_in_timeslot(day, i)">
                {{option}}
