--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -1,37 +1,52 @@
 <p>View 2 should be the timetable page. A big old timetable with the data provided from the last page
-   click a choice to select it and deselect(grey) the other choices for that class. Checkbox to show only selected classes
-   (preview mode for your completed schedule).</p>
+    click a choice to select it and deselect(grey) the other choices for that class. Checkbox to show only selected
+    classes
+    (preview mode for your completed schedule).</p>
 
 <ul>
-   <!-- For each course in the system, output a list of classes within that course, along with a form to add a new
-   class to the course -->
-   <li ng-repeat="course in courses">
-      {{course.name}}
-      <ul>
-         <!-- For each class in the course, output a list of options for that class, along with a form to add a new
-         option to the class -->
-         <li ng-repeat="class in course.classes">
-            {{class.name}} ({{class.dur}} hrs)
-            <ul ng-repeat="option in class.options">
-               {{time_string_from_option(option)}}
-               {{option}}
-            </ul>
-            <br>
-         </li>
-      </ul>
-   </li>
+    <!-- For each course in the system, output a list of classes within that course, along with a form to add a new
+    class to the course -->
+    <li ng-repeat="course in courses">
+        {{course.name}}
+        <ul>
+            <!-- For each class in the course, output a list of options for that class, along with a form to add a new
+            option to the class -->
+            <li ng-repeat="class in course.classes">
+                {{class.name}} ({{class.dur}} hrs)
+                <ul ng-repeat="option in class.options">
+                    {{time_string_from_option(option)}}
+                    {{option}}
+                </ul>
+                <br>
+            </li>
+        </ul>
+    </li>
 </ul>
 
 <!-- Calendar -->
-<table>
-   <tr ng-repeat="i in time_range()">
-      <th ng-repeat="day in day_range()">
-         <!--{{day}}, {{i}}-->
-         <ol>
-            <li ng-repeat="option in options_in_timeslot(day, i)">
-               {{option}}
-            </li>
-         </ol>
-      </th>
-   </tr>
+<table class="striped">
+    <thead>
+    <tr>
+        <th>
+            <!--Empty header column for the left side time scale-->
+        </th>
+        <th ng-repeat="day in day_range()">
+            {{day}}
+        </th>
+    </tr>
+    </thead>
+    <tr ng-repeat="i in time_range()">
+        <th>
+            {{i}}
+        </th>
+        <!--Colspan attribute to merge rows?-->
+        <td ng-repeat="day in day_range()">
+            {{day}}, {{i}}
+            <ol>
+                <li ng-repeat="option in options_in_timeslot(day, i)">
+                    {{option}}
+                </li>
+            </ol>
+        </td>
+    </tr>
 </table>
