--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -4,7 +4,7 @@
     (preview mode for your completed schedule).</p>
 
 <!-- Calendar -->
-<table class="striped responsive-table">
+<table class="striped">
     <thead>
     <tr>
         <th>
@@ -20,15 +20,15 @@
             {{i}}
         </th>
         <td ng-repeat="day in day_range()">
-                <div ng-repeat="opt in options_in_timeslot(day, i)">
-                    <div class="teal lighten-3">
-                        <b ng-if="opt.selected">
-                            {{opt.day}}: {{opt.time}}
-                        </b>
-
-                        <div ng-if="!opt.selected">
-                            {{opt.day}}: {{opt.time}}
-                        </div>
+            <!--<div ng-repeat="opt in options_in_timeslot(day, i)">-->
+            <div ng-repeat="bundle in flat_options() | filter: {opt: {day: day, time: i}}">
+                <div class="teal lighten-3">
+                    <!-- Each template needs to be in its own div or else it shits itself?-->
+                    <div>
+                        {{i}}
+                    </div>
+                    <div>
+                        {{day}}
                     </div>
                 </div>
         </td>
