--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -21,7 +21,11 @@
         </th>
         <td ng-repeat="day in day_range()">
             <div ng-repeat="bundle in bundles | filter: {opt: {day: day, time: i}}">
-                <div class="teal lighten-3">
+                <div ng-if="bundle.opt.selected" class="teal lighten-2" ng-click="make_active(bundle)">
+                    {{day}} {{i}}
+                </div>
+
+                <div ng-if="!bundle.opt.selected" class="teal lighten-5" ng-click="make_active(bundle)">
                     {{day}} {{i}}
                 </div>
         </td>
