--- a/app/Ingest/Ingest.html
+++ b/app/Ingest/Ingest.html
@@ -8,7 +8,8 @@
                 <label for="new_course_name">Course Name: </label>
             </div>
             <div class="col s2">
-                <button type="submit" name="action" ng-click="addCourse()" class="waves-effect waves-light btn">Add Course
+                <button type="submit" name="action" ng-click="addCourse()" class="waves-effect waves-light btn">Add
+                    Course
                 </button>
             </div>
         </form>
