Make input page slightly more readable

--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -1,3 +1,7 @@
+<p>HANDLE multiple hours:
+    will have to pull things in that started time-length hours ago
+    add some sort of (continued) flag since they will be in separate boxes</p>
+
 <!-- Course Key -->
 <div class="row">
     <div ng-repeat="course in courses" class="col s2" ng-click="course.active=!course.active">
