--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -35,16 +35,30 @@
             {{i}}
         </th>
         <td ng-repeat="day in day_range">
+
             <div ng-repeat="bundle in bundles | filter: {opt: {day: day, time: i}}">
                 <div ng-if="bundle.course.active && bundle.opt.selected" class="{{bundle.course.colour}} lighten-2"
                      ng-click="toggle_active(bundle)">
-                    {{bundle.course.name}} {{bundle.clss.name}}
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.opt.id}})
                 </div>
 
                 <div ng-if="!preview_mode && bundle.course.active && !bundle.opt.selected" class="{{bundle.course.colour}} lighten-5"
                      ng-click="toggle_active(bundle)">
-                    {{bundle.course.name}} {{bundle.clss.name}}
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.opt.id}})
                 </div>
+            </div>
+
+            <div ng-repeat="bundle in cont_bundles | filter: {opt: {day: day, time: i}}">
+                <div ng-if="bundle.course.active && bundle.parent.selected" class="{{bundle.course.colour}} lighten-2"
+                     ng-click="toggle_active(bundle)">
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
+                </div>
+
+                <div ng-if="!preview_mode && bundle.course.active && !bundle.parent.selected" class="{{bundle.course.colour}} lighten-5"
+                     ng-click="toggle_active(bundle)">
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
+                </div>
+            </div>
         </td>
     </tr>
 </table>
