--- a/app/Ingest/Ingest.html
+++ b/app/Ingest/Ingest.html
@@ -1,4 +1,17 @@
-<h4>Add Timetable Data</h4>
+<h4>Manual Timetable</h4>
+<div>
+    Add timetable data manually:
+    <ol>
+        <li>Insert a name for a course (eg. MATH1000) and create the course. The course will appear in the list below.
+        </li>
+        <li>Add a name and a duration for a class in the course (eg. a 1 hour tutorial) and create the class. The class
+            will appear in the list under the course it belongs to.
+        </li>
+        <li>Choose the day and start time of an option in that course and add it to the list of options. (i.e. many
+            classes give multiple timeslots from which a student must choose one to attend)
+        </li>
+    </ol>
+</div>
 
 <div class="">
     <div class="row">
