--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -68,14 +68,12 @@
             </div>
 
             <div ng-repeat="bundle in cont_bundles | filter: {opt: {day: day, time: i}}">
-                <div ng-if="bundle.course.active && bundle.parent.selected" class="{{bundle.course.colour}} lighten-3"
-                     ng-click="toggle_active(bundle)">
+                <div ng-if="bundle.course.active && bundle.parent.selected" class="{{bundle.course.colour}} lighten-3">
                     {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
                 </div>
 
                 <div ng-if="!preview_mode && bundle.course.active && !bundle.parent.selected"
-                     class="{{bundle.course.colour}} lighten-5"
-                     ng-click="toggle_active(bundle)">
+                     class="{{bundle.course.colour}} lighten-5">
                     {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
                 </div>
             </div>
