--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 <body>
 <ul class="menu">
     <li><a href="#!/Ingest">Ingest</a></li>
+    <li><a href="#!/Parser">Parser</a></li>
     <li><a href="#!/Display">Display</a></li>
 </ul>
 
@@ -38,17 +39,20 @@
 
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
--->
+--><script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/htmlparser/node-htmlparser.js"></script>
 <script src="app.js"></script>
 <script src="Ingest/Ingest.js"></script>
 <script src="Display/Display.js"></script>
+<script src="Parser/Parser.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+
 </body>
 </html>
