Comments, error management, result display for course parsing

--- a/app/Parser/Parser.html
+++ b/app/Parser/Parser.html
@@ -20,4 +20,5 @@
     <label for="textbox">Search Result Source</label>
     <button type="submit" class="waves-effect waves-light btn" ng-click="create_course_from_html()">Submit</button>
 </form>
+    <div>{{parse_result}}</div>
 </div>
